# breast-cancer-detection-torch

./: .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml
models/pretrained/detection/: opt.yaml  train_config.yaml
scripts/: df.py  download_dataset.sh  run.sh
src/: config.py  dataset.py  losses.py  metric.py  models.py  roi_extraction.py  split_data.py  split_data_subm.py  train_runner.py  transforms.py  utils.py
